refactor openapi to use polymorphism
